k8s/clamavd-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clamvd-api
  namespace: browser-sandbox
  labels:
    app: clamvd-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clamvd-api
  template:
    metadata:
      labels:
        app: clamvd-api
    spec:
      containers:
        - name: clamvd-api
          image: ghcr.io/browsersec/clamav-go-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/v1/version
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/version
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: clamd-api
  namespace: browser-sandbox
  labels:
    app: clamvd-api
spec:
  selector:
    app: clamvd-api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
